Improve overflow detection. Fix BL-891, BL-876, BL-890, maybe Bl-869

--- a/DistFiles/xMatter/bloom-xmatter-common.less
+++ b/DistFiles/xMatter/bloom-xmatter-common.less
@@ -119,7 +119,7 @@
             display: inherit;
             text-align: center;
             line-height: 1.7em;
-            min-height: 20px;
+            min-height: 1.7;
             height: auto;
             // max-height:2em;
         }
